--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,39 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
+# Dependency directories
+node_modules/
+.pnp/
 .pnp.js
 
-# testing
-/coverage
+# Build output
+/build/
+dist/
 
-# production
-/build
+# Coverage reports
+/coverage/
 
-# misc
+# System files
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+Thumbs.db
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Local env files (keep secrets safe)
+.env*
+!.env.example
+
+# IDE/editor config (optional)
+.vscode/
+.idea/
+
+# Mac-specific files
+.AppleDouble
+.LSOverride
+
+# Optional cache
+.cache/
+.eslintcache
+
+# OS junk
+Icon?
